# evmautomation

./: .gitignore  LICENSE  README.md  config.yaml.example  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
evmautomation/: .gitignore  __init__.py  __main__.py  evmautomation.py  main.py
evmautomation/contracts/: __init__.py  bankrollnetworkstackcontract.py  basecontract.py  bep20tokencontract.py  bsccontract.py  dripfaucetcontract.py  dripfountaincontract.py  dripgardencontract.py  driptokencontract.py  pcsroutercontract.py  trunkbackedpoolcontract.py  trunkstampedecontract.py
evmautomation/defines/: bsc.py  drip.py  generic.py  pcs.py  trunk.py  workflowmap.py
evmautomation/tools/: config.py  encryption.py  log.py  rpc.py
evmautomation/workflows/: __init__.py  baseworkflow.py  bnbsellworkflow.py  bscworkflow.py  dripfaucetworkflow.py  dripgardenworkflow.py  driphydrationworkflow.py  dripsellworkflow.py  gardenplantworkflow.py  stampederollworkflow.py  trunknativeworkflow.py  trunksellworkflow.py  trunkstampedeworkflow.py
