[metadata]
name = evmautomation
version = 0.1.0
author = nightshift2k
author_email = join.the.nightshift@protonmail.com
description = EVMAutomation - an EVM automation framework for smart contracts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nightshift2k/evmautomation
license = GPLv3
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: MacOS
    Operating System :: Unix
    Topic :: Office/Business :: Financial :: Investment

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires = 
    cryptography
    humanize
    pytelegrambotapi
    pyyaml
    web3

[options.entry_points]
console_scripts =
    evma = evmautomation.main:main
